--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "jsonwebtoken": "8.5.1",
     "live-server": "^1.2.1",
-    "moment": "2.18.1",
+    "moment": "^2.29.1",
     "mongodb": "3.6.4",
     "mongoose": "5.11.15",
     "mongoose-float": "1.0.4",
@@ -34,7 +34,7 @@
     "normalize.css": "^8.0.1",
     "numeral": "^2.0.6",
     "react": "^17.0.1",
-    "react-addons-shallow-compare": "15.6.0",
+    "react-addons-shallow-compare": "^15.6.3",
     "react-dates": "12.7.0",
     "react-dom": "^17.0.1",
     "react-modal": "^3.12.1",
