--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "babel-cli": "^6.26.0",
+    "babel-cli": "^6.18.0",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -21,6 +21,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "0.28.4",
+    "excel4node": "^1.7.2",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "jsonwebtoken": "8.5.1",
@@ -47,7 +48,7 @@
     "uuid": "^8.3.2",
     "validator": "13.5.2",
     "webpack": "3.1.0",
-    "webpack-dev-server": "2.5.1"
+    "webpack-dev-server": "^2.11.5"
   },
   "devDependencies": {
     "env-cmd": "10.1.0",
